# pan-scm-ansible

./: .ansible-lint  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint  ANSIBLE_TESTING.md  CHANGELOG.md  CONTRIBUTING.md  ISSUES.md  Makefile  README.md  SUPPORT.md  TESTING_NOTES.md  _config.yml  ansible.cfg  check_installation.sh  fix_yaml.sh  galaxy.yml  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  requirements.yml  standardize_docs.sh  tox.ini
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements.txt
.devcontainer/library-scripts/: README.md  common-debian.sh
.github/workflows/: ansible-lint.yml  ansible-test.yml  ci.yml  mkdocs-build-deploy.yml  yamllint.yml
docs/: STYLE_GUIDE.md  index.md
docs/about/: contributing.md  getting-started.md  installation.md  introduction.md  license.md  release-notes.md  troubleshooting.md
docs/collection/: index.md
docs/collection/modules/: address.md  address_group.md  address_group_info.md  address_info.md  agent_versions.md  agent_versions_info.md  anti_spyware_profile.md  anti_spyware_profile_info.md  application.md  application_group.md  application_group_info.md  application_info.md  bandwidth_allocations.md  bandwidth_allocations_info.md  bgp_routing.md  bgp_routing_info.md  decryption_profile.md  decryption_profile_info.md  dns_security_profile.md  dns_security_profile_info.md  dynamic_user_group.md  dynamic_user_group_info.md  external_dynamic_lists.md  external_dynamic_lists_info.md  hip_object.md  hip_object_info.md  hip_profile.md  hip_profile_info.md  http_server_profiles.md  http_server_profiles_info.md  ike_crypto_profile.md  ike_crypto_profile_info.md  ike_gateway.md  ike_gateway_info.md  index.md  internal_dns_servers.md  internal_dns_servers_info.md  ipsec_crypto_profile.md  ipsec_crypto_profile_info.md  ipsec_tunnel.md  (+30 more)
docs/collection/plugins/: index.md  inventory.md  lookup.md
docs/collection/roles/: bootstrap.md  deploy_config.md  index.md
docs/css/: custom.css  termynal.css
docs/development/: ansible_compatibility.md  contributing.md  release-process.md  testing.md
docs/guide/: advanced-topics.md  authentication.md  getting-started.md  playbook-examples.md  using-modules.md  using-roles.md
docs/js/: custom.js  termynal.js
meta/: runtime.yml
pan_scm_ansible/: galaxy.yml
pan_scm_ansible/meta/: runtime.yml
pan_scm_ansible/plugins/module_utils/: api_spec.py  authenticate.py
pan_scm_ansible/plugins/modules/: address.py  address_group.py  anti_spyware_profile.py  application.py  application_group.py  service.py  service_group.py  tag.py
pan_scm_ansible/tests/sanity/: ignore-2.18.txt
plugins/: README.md
plugins/module_utils/: authenticate.py  serialize_response.py
plugins/module_utils/api_spec/: address.py  address_group.py  agent_versions.py  application.py  (+42 more)
plugins/modules/: address.py  address_group.py  address_group_info.py  address_info.py  agent_versions.py  agent_versions_info.py  anti_spyware_profile.py  anti_spyware_profile_info.py  application.py  application_group.py  application_group_info.py  application_info.py  bandwidth_allocations.py  bandwidth_allocations_info.py  bgp_routing.py  bgp_routing_info.py  decryption_profile.py  decryption_profile_info.py  dns_security_profile.py  dns_security_profile_info.py  dynamic_user_group.py  dynamic_user_group_info.py  external_dynamic_lists.py  external_dynamic_lists_info.py  hip_object.py  hip_object_info.py  hip_profile.py  hip_profile_info.py  http_server_profiles.py  http_server_profiles_info.py  ike_crypto_profile.py  ike_crypto_profile_info.py  ike_gateway.py  ike_gateway_info.py  internal_dns_servers.py  internal_dns_servers_info.py  ipsec_crypto_profile.py  ipsec_crypto_profile_info.py  log_forwarding_profile.py  log_forwarding_profile_info.py  (+24 more)
scripts/: build.py
tests/: ansible.cfg  run_service_connections_tests.yaml  run_test_service_connections.yaml  test_address.yaml  test_address_group.yaml  test_address_group_info.yaml  test_address_info.yaml  test_agent_versions.yaml  test_anti_spyware_profile.yaml  test_anti_spyware_profile_info.yaml  test_application.yaml  test_application_group.yaml  test_application_group_info.yaml  test_application_info.yaml  test_bandwidth_allocations.yaml  test_bandwidth_allocations_info.yaml  test_bgp_routing.yaml  test_bgp_routing_info.yaml  test_decryption_profile.yaml  test_decryption_profile_info.yaml  test_dns_security_profile.yaml  test_dns_security_profile_info.yaml  test_dynamic_user_group.yaml  test_dynamic_user_group.yml  test_dynamic_user_group_info.yaml  test_external_dynamic_lists.yaml  test_external_dynamic_lists_info.yaml  test_hip_object.yaml  test_hip_object_info.yaml  test_hip_profile.yaml  test_hip_profile_info.yaml  test_http_server_profiles.yaml  test_http_server_profiles_info.yaml  test_ike_crypto_profile.yaml  test_ike_crypto_profile_info.yaml  test_ike_gateway.yaml  test_internal_dns_servers.yaml  test_internal_dns_servers_info.yaml  test_ipsec_crypto_profile.yml  test_ipsec_crypto_profile_info.yaml  (+29 more)
tests/sanity/: ignore-2.11.txt  ignore-2.17.txt  ignore-2.18.txt  ignore-all.txt
(+6 files in other folders)
